{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 57,
  "lineage": "8fa7b562-027c-2448-b9c3-e4b254bf986a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "grafana",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:433223883348:loadbalancer/app/grafana/f1af806a42610c3b",
            "arn_suffix": "app/grafana/f1af806a42610c3b",
            "dns_name": "grafana-1778300460.us-east-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:433223883348:loadbalancer/app/grafana/f1af806a42610c3b",
            "idle_timeout": 3600,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "grafana",
            "security_groups": [
              "sg-002dcdf6131a94a73"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-32089345"
              },
              {
                "subnet_id": "subnet-6ef25245"
              }
            ],
            "subnets": [
              "subnet-32089345",
              "subnet-6ef25245"
            ],
            "tags": {
              "Description": "Application Load Balancer for Grafana",
              "ManagedBy": "Terraform",
              "Name": "grafana"
            },
            "vpc_id": "vpc-04e9a561",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.grafana_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:433223883348:listener/app/grafana/f1af806a42610c3b/22519e9c3a4dd91b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:433223883348:targetgroup/grafana-tg/05599b90821b6298",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:433223883348:listener/app/grafana/f1af806a42610c3b/22519e9c3a4dd91b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:433223883348:loadbalancer/app/grafana/f1af806a42610c3b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.grafana",
            "aws_lb_target_group.grafana"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "grafana",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:433223883348:targetgroup/grafana-tg/05599b90821b6298",
            "arn_suffix": "targetgroup/grafana-tg/05599b90821b6298",
            "deregistration_delay": 30,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/login",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:433223883348:targetgroup/grafana-tg/05599b90821b6298",
            "lambda_multi_value_headers_enabled": false,
            "name": "grafana-tg",
            "port": 3000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Description": "Target Group for Grafana",
              "ManagedBy": "Terraform",
              "Name": "grafana-tg"
            },
            "target_type": "ip",
            "vpc_id": "vpc-04e9a561"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "grafana_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433223883348:security-group/sg-002dcdf6131a94a73",
            "description": "the alb security group that allows port 80/443 from whitelisted ips",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002dcdf6131a94a73",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "grafana-alb",
            "name_prefix": null,
            "owner_id": "433223883348",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-04e9a561"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "grafana_ecs",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433223883348:security-group/sg-0a1c9e2ab6b735af4",
            "description": "ingress to the grafana fargate task from the alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1c9e2ab6b735af4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-002dcdf6131a94a73"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "grafana-ecs",
            "name_prefix": null,
            "owner_id": "433223883348",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-04e9a561"
          },
          "dependencies": [
            "aws_security_group.grafana_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433223883348:security-group/sg-04bd5eff1116c9da4",
            "description": "RDS Aurora access from internal security groups",
            "egress": [],
            "id": "sg-04bd5eff1116c9da4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow 3306 from defined security groups",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a1c9e2ab6b735af4"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "grafana-aurora5620191129062302637600000001",
            "name_prefix": "grafana-aurora56",
            "owner_id": "433223883348",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "RDS Aurora access from internal security groups",
              "ManagedBy": "Terraform",
              "Name": "grafana-aurora56"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e9a561"
          },
          "dependencies": [
            "aws_security_group.grafana_alb",
            "aws_security_group.grafana_ecs"
          ]
        }
      ]
    }
  ]
}